<resources>
    <string name="app_name">TechRace 2K16</string>
    <string name="app_desc">The official SPIT TechRace 2016 app</string>
    <string name="locked">App Locked!</string>
    <string name="locked_desc">Ask a volunteer or organizer to unlock the app for you\n(You only need to do this once)</string>
    <string name="locked_toast">Please contact a volunteer or organizer to get an access code</string>
    <string name="camera">Permissions</string>
    <string name="camera_desc">This app requires permission to access the camera, to be able to scan codes</string>
    <string name="camera_toast">Please grant permission to access camera</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scanner">Scanner</string>
    <string name="clues">Clues</string>
    <string name="no_clues">No clues solved yet :(\nGet cracking!</string>
    <string name="locations">Locations</string>
    <string name="about">About</string>
    <string name="contact">Helpline</string>
    <string name="other_events">Other events</string>
    <string name="action_help">Help</string>
    <string name="action_confirm">Confirm</string>
    <string name="scan_help">Tap the floating action button to open the scanner.
        Place the barcode anywhere in the viewfinder and it will be automatically scanned.
        In case your camera fails to scan the code, try holding your device in landscape, or ask a volunteer or organizer to input code manually.</string>
    <string name="scan_manual">Tap here to input code manually</string>
    <string name="manual_desc">Input the code below:</string>
    <string name="contact_help">Need help?</string>
    <string name="contact_help_desc">Call our helpline numbers!</string>
    <string name="helpline_1">Neil Daftary: +91 99209 24813</string>
    <string name="helpline_2">Aditya Desai: +91 90294 62609</string>
    <string name="helpline_3">Aditya Gaikwad: +91 99690 51770</string>
    <string name="helpline_4">Meet Gopani: +91 99697 63551</string>
    <string name="helpline_5">Ananya Ojha: +91 99877 01440</string>
    <string name="app_help">Issue with the app?</string>
    <string name="app_help_desc">Call the tech guys!</string>
    <string name="app_helpline_1">Samriddha Basu: +91 96194 02185</string>
    <string name="app_helpline_2">Aashish Nehete: +91 96196 41945</string>
    <string name="credits">Team</string>
    <string name="credits_desc">The people behind SPIT TechRace 2016</string>
    <string name="view">Show team</string>
    <string name="hints_desc">Match the tiles with the same icons by clicking on the circles. Tiles
    disappear when they match. Complete this challenge and an additional clue will present itself.</string>
    <string name="licences">Open source licences</string>
    <string name="licence_desc">Attribution notices for the libraries used</string>
    <string name="view_notices">Show notices</string>
    <string name="support_lib">Android Support Library</string>
    <string name="support_lib_desc">Copyright © 2011 The Android Open Source Project\n\n
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at\n\n
        \thttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</string>
    <string name="scanner_lib">Material Barcode Scanner</string>
    <string name="scanner_lib_desc">Copyright © 2016 Edward van Raak\n\n
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at\n\n
        \thttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</string>
    <string name="butterknife">Butter Knife</string>
    <string name="butterknife_desc">Copyright © 2013 Jake Wharton\n\n
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at\n\n
        \thttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</string>
    <string name="flipview">FlipView</string>
    <string name="flipview_desc">Copyright 2016 Davide Steduto\n\n
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at\n\n
        \thttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</string>
    <string name="intro">material-intro</string>
    <string name="intro_desc">Copyright 2016 Heinrich Reimer\n\n
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at\n\n
        \thttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</string>
    <string name="glide">Glide</string>
    <string name="glide_desc">Copyright 2014 Google, Inc. All rights reserved.
\n\n
Redistribution and use in source and binary forms, with or without modification, are
permitted provided that the following conditions are met:
\n\n
   1. Redistributions of source code must retain the above copyright notice, this list of
         conditions and the following disclaimer.
\n\n
   2. Redistributions in binary form must reproduce the above copyright notice, this list
         of conditions and the following disclaimer in the documentation and/or other materials
         provided with the distribution.
\n\n
THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. "AS IS" AND ANY EXPRESS OR IMPLIED
WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR
CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

The views and conclusions contained in the software and documentation are those of the
authors and should not be interpreted as representing official policies, either expressed
or implied, of Google, Inc.
    \n\nFor third-party license details, see LICENSE file:
    \nhttps://github.com/bumptech/glide/blob/master/LICENSE</string>
    <string name="people_name_1">Neil Daftary</string>
    <string name="people_desc_1">Executive Head</string>
    <string name="people_name_2">Aditya Gaikwad</string>
    <string name="people_desc_2">Creative Head</string>
    <string name="people_name_3">Aashish Nehete</string>
    <string name="people_desc_3">Creative Head</string>
    <string name="people_name_4">Aditya Desai</string>
    <string name="people_desc_4">Finance Head</string>
    <string name="people_name_5">Harsh Jain</string>
    <string name="people_desc_5">Volunteer Operations Head</string>
    <string name="people_name_6">Himanshu Joshi</string>
    <string name="people_desc_6">PR and Online Marketing</string>
    <string name="people_name_7">Prutha Atre</string>
    <string name="people_desc_7">Public Relations</string>
    <string name="people_name_10">Shraddha Wani</string>
    <string name="people_desc_10">Public Relations</string>
    <string name="people_name_8">Samriddha Basu</string>
    <string name="people_desc_8">Tech Head</string>
    <string name="people_name_9">Disha Gandhi</string>
    <string name="people_desc_9">Marketing Head</string>
    <string name="redbull_event">Red Bull Soapbox Race 2016</string>
    <string name="redbull_desc_short">Where Genius Meets Ridiculous</string>
    <string name="redbull_desc_long">The Red Bull Soapbox Race is an international event that started back in the year 2000, in Brussels. Since then, more than a hundred Red Bull Soapbox Races have been organised globally. India will host this one-of-a-kind event with all its craziness for a second time this year. In an outrageous downhill race, racers are welcomed to build their own soapbox and compete against gravity. Each of these hand-made machines have no engine on them. So how do I get to the finish line, you might ask? With a big push from your teammates, a little bit of luck and a big dollop of eccentricity! Back in 2012, people witnessed everything from a vadapav to a pizza slice roll down Mount Mary slope in the inaugural edition of Soapbox. This November, Red Bull Soapbox Race returns, and it promises to be bigger and better. So, are you in for the ride?
    \n\nFor more information, visit http://www.redbullsoapboxrace.com/</string>
    <string name="other_events_desc">Here are some other events to watch out for at SPIT\'s tech fest, Matrix</string>
    <string name="vsm">Virtual Stock Market</string>
    <string name="vsm_desc">The mega event where participants will be buying and selling shares of their favourite brands and celebs.\nThere are exciting prizes like printers and hard disks, so be sure to take part!</string>
    <string name="techeshi">Techeshi\'s</string>
    <string name="techeshi_desc">Techeshi\'s is an event that caters to both - the tech enthusiasts as well as the novices.
It consists of two major sub-events viz. Line Following Bot and Techeshi\'s Castle.
The former would be a platform for the technoholics to showcase their talents by building autonomous line following robots. It\'d be a test of the survival of the fittest bot in the truest sense!
The latter would be a fun event wherein the participants will have a chance to play the most amazing robo games and solve some challenging brain teasers.
Thus, Techeshi\'s is a perfect blend of brainpower and amusement!</string>
    <string name="pokemon">Pokemon Showdown</string>
</resources>