<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_menu">
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_center_focus_weak_white_24dp"
            android:title="@string/scanner" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_beenhere_white_24dp"
            android:title="@string/locations" />
    </group>

    <group android:id="@+id/nav_menu_extra">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
    </group>
</menu>
